Fix main logo size on mobile

--- a/src/main/resources/web/app/stylesheets/partials/_parallax.scss
+++ b/src/main/resources/web/app/stylesheets/partials/_parallax.scss
@@ -59,7 +59,7 @@
     }
 
     &__logo--rdev {
-        width: 45vw;
+        width: 65vw;
         margin-bottom: $space-sm;
 
         @media (min-width: $screen-sm-min) {
